--- a/iMonitoringApp/src/global.scss
+++ b/iMonitoringApp/src/global.scss
@@ -1,22 +1,13 @@
-/*
- * App Global CSS
- * ----------------------------------------------------------------------------
- * Put style rules here that you want to apply globally. These styles are for
- * the entire app and not just one component. Additionally, this file can be
- * used as an entry point to import other CSS/Sass files to be included in the
- * output CSS.
- * For more information on global stylesheets, visit the documentation:
- * https://ionicframework.com/docs/layout/global-stylesheets
- */
+// src/global.scss
 
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
 
 /* Basic CSS for apps built with Ionic */
 @import "@ionic/angular/css/normalize.css";
-@import "@ionic/angular/css/structure.css";
+@import "@ionic/angular/css/structure.css"; // Quítalo si no usas estructura CSS de Ionic
 @import "@ionic/angular/css/typography.css";
-@import "@ionic/angular/css/display.css";
+@import '@ionic/angular/css/display.css'; // Utilidades de display
 
 /* Optional CSS utils that can be commented out */
 @import "@ionic/angular/css/padding.css";
@@ -24,6 +15,8 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+
 
 /**
  * Ionic Dark Mode
@@ -35,3 +28,12 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+
+@import "./theme/variables.scss";
+
+/* Estilos globales adicionales si los necesitas */
+body {
+  // Tailwind se encargará del font-smoothing con antialiased por defecto
+  // Las clases .dark aplicadas a <html> o <body> activarán los prefijos dark: de Tailwind
+}
