--- a/iMonitoringApp/src/app/main-layout/main-layout.page.html
+++ b/iMonitoringApp/src/app/main-layout/main-layout.page.html
@@ -25,7 +25,7 @@
           
           <div class="relative">
             <button (click)="isUserDropdownOpen = !isUserDropdownOpen" class="transition-opacity duration-200 rounded-full focus:outline-none">
-              <img class="w-10 h-10 rounded-full" [src]="currentUser?.avatarUrl || 'assets/icon/avatar_placeholder.png'" [alt]="currentUser?.name">
+              <img class="w-10 h-10 rounded-full object-cover" [src]="currentUser?.avatarUrl || 'assets/icon/default-avatar.svg'" [alt]="currentUser?.name || 'Avatar'">
             </button>
             <div *ngIf="isUserDropdownOpen" (click)="isUserDropdownOpen = false" class="fixed inset-0 z-30 w-full h-full"></div>
             <div *ngIf="isUserDropdownOpen"
@@ -36,40 +36,7 @@
             </div>
           </div>
         </ion-buttons>
-
         </ion-toolbar>
     </ion-header>
-
-    <ion-content class="flex-1 h-full p-4 bg-gray-100 dark:bg-kwd-dark">
-      <div *ngIf="showPageLoading"
-        class="fixed inset-0 z-50 flex items-center justify-center text-2xl font-semibold text-white bg-opacity-90 bg-kwd-blue-800">
-        Cargando...
-      </div>
-      <ion-router-outlet></ion-router-outlet>
-    </ion-content>
-  </div>
-
-  <ion-modal [isOpen]="isSettingsPanelOpen" (didDismiss)="closePanel('settings')"
-    cssClass="kwd-side-panel kwd-settings-panel" side="end" mode="ios" [backdropDismiss]="true">
-    <ng-template>
-      <app-settings-panel (closePanelRequest)="closePanel('settings')"></app-settings-panel>
-    </ng-template>
-  </ion-modal>
-
-  <ion-modal [isOpen]="isNotificationsPanelOpen" (didDismiss)="closePanel('notifications')"
-    cssClass="kwd-side-panel kwd-notifications-panel" side="end" mode="ios" [backdropDismiss]="true">
-    <ng-template>
-      <ion-header><ion-toolbar><ion-title>Notificaciones</ion-title><ion-buttons slot="end"><ion-button (click)="closePanel('notifications')">Cerrar</ion-button></ion-buttons></ion-toolbar></ion-header>
-      <ion-content class="ion-padding"><p>Contenido del panel de notificaciones.</p></ion-content>
-    </ng-template>
-  </ion-modal>
-
-  <ion-modal [isOpen]="isSearchPanelOpen" (didDismiss)="closePanel('search')"
-    cssClass="kwd-side-panel kwd-search-panel" side="end" mode="ios" [backdropDismiss]="true">
-    <ng-template>
-      <ion-header><ion-toolbar><ion-title>Búsqueda</ion-title><ion-buttons slot="end"><ion-button (click)="closePanel('search')">Cerrar</ion-button></ion-buttons></ion-toolbar></ion-header>
-      <ion-content class="ion-padding"><p>Contenido del panel de búsqueda.</p></ion-content>
-    </ng-template>
-  </ion-modal>
-
+    </div>
 </ion-app>
